# you_can_bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: Django tests.yml  Test flake8 and isort.yml  app_tests.yml  ci_lint_tests.yml  deploy_workflow.yml  deploy_workflow_prod.yml  renewing_certificates.yml
infra/: default.conf  default.local.conf  default.prod.conf  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml
infra/nginx/: default.conf
src/: run_bot.py
src/backend/api/: admin.py  apps.py  constants.py  conversation_utils.py  filters.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
src/backend/api/calculation_service/: task_1.py  task_2.py  task_3.py  task_4.py  task_8.py  test_of_task_2.py  test_of_task_3.py  test_task_1.py  test_task_2.py
src/backend/api/migrations/: 0001_initial.py  0002_alter_answer_unique_together.py  0002_alter_userfromtelegram_telegram_id.py  0003_alter_userfromtelegram_options_alter_answer_content_and_more.py  0003_questions_in_database.py  0004_non_unique_telegram_username.py  0005_rename_task_answer_task_status_and_more.py  0006_add_default_to_description_on_choice_and_more.py  0007_add_results_to_tasks.py  0008_alter_choice_description_alter_problem_answer_and_more.py  0009_alter_question_options_and_more.py  0010_alter_answer_question.py  0011_alter_result_options_alter_result_unique_together.py  0012_replace_key_with_textfield.py  0013_alter_mentorprofile_options_alter_problem_options_and_more.py  0013_remove_mentorprofile_telegram_username_and_more.py  0014_alter_mentorprofile_telegram_id.py  0015_alter_resultstatus_options_and_more.py  0015_change_meta_options_on_photo_question_resultstatus_task.py  (+15 more)
src/backend/backend/: settings.py  urls.py
src/backend/fixtures/: groups.json  task_1_data.json  task_2_data.json  task_3_data.json  task_4_data.json  task_5_data.json  task_6_data.json  task_7_data.json  task_8_data.json  tasks.json
src/backend/info_pages/: apps.py  mixins.py  urls.py  views.py
src/bot/: Dockerfile  bot.py  run_bot.py
src/bot/conversations/: __init__.py
src/bot/external_requests/: __init__.py  exceptions.py  mock.py  service.py
src/bot/internal_requests/: entities.py  service.py
src/bot/utils/: configs.py  error_handler.py  logger.py  telegram_retry.py
(+102 files in other folders)
