[tool.poetry]
name = "you_can_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Django = "~4.2"
djangorestframework = "~3.15"
python-telegram-bot = {version = "~21.3", extras = ["rate-limiter"]}
psycopg2-binary = "~2.9"
gunicorn = "~22"
pillow = ">=10.1,<10.4"
python-dotenv = "~1.0"
python-slugify = "~8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.7.0"
django-debug-toolbar = "^4.2.0"

[tool.isort]
profile = "black"
skip_glob = ["**/migrations/*.py"]
src_paths = ["src/bot", "src/backend"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
