[tool.poetry]
name = "you_can_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Django = "~4.2"
djangorestframework = "^3.16.0"
python-telegram-bot = {extras = ["rate-limiter"], version = "^22.1"}
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
pillow = "^11.2.1"
python-dotenv = "^1.1.0"
python-slugify = "^8.0.4"
django-tinymce = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
django-debug-toolbar = "^5.2.0"

[tool.isort]
profile = "black"
skip_glob = ["**/migrations/*.py"]
src_paths = ["src/bot", "src/backend"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
